--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -18,10 +17,10 @@
           </li>
 
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="#contacts">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -165,7 +164,7 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/kGHBd9NLQaHWzJa29"
+            <a id="contacts" href="https://goo.gl/maps/kGHBd9NLQaHWzJa29"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
