--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Портфолио</title>
   </head>
   <body>
-   <header>
+    <header>
       <!--Навигация-->
       <nav>
         <a href="./index.html">WebStudio</a>
@@ -33,69 +33,106 @@
           <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
-      <!--Герой-->
-      <main>
-          <!--Кнопки фильтров-->
-          <div>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-          </div>
-          <!--Секция выполненных работ-->
-          <section>
-              <h1>Примеры наших работ</h1>
-              <ul>
-                  <li>
-                      <img src="./images/technockrack.jpg" alt="Технокряк" width="370" height="294">
-                      <p>Технокряк</p>
-                      <p>Веб-сайт</p>
-                  </li>
-                  <li>
-                      <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                      <p>Постер New Orlean vs Golden Star</p>
-                      <p>Дизайн</p>
-                  </li>
-                  <li>
-                      <img src="./images/seafood.jpg" alt="" width="370" height="294">
-                      <p>Ресторан Seafood</p>
-                      <p>Приложение</p>
-                  </li>
-                  <li>
-                      <img src="./images/prime.jpg" alt="" width="370" height="294" width="370" height="294">
-                      <p>Проект Prime</p>
-                      <p>Маркетинг</p>
-                  </li>
-                  <li>
-                      <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" height="294">
-                      <p>Проект Boxes</p>
-                      <p>Приложение</p>
-                  </li>
-                  <li>
-                      <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                      <p>Inspiration has no Borders</p>
-                      <p>Веб-сайт</p>
-                  </li>
-                  <li>
-                      <img src="./images/limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
-                      <p>Издание Limited Edition</p>
-                      <p>Дизайн</p>
-                  </li>
-                  <li>
-                      <img src="./images/lab.jpg" alt="Проект LAB" width="370" height="294">
-                      <p>Проект LAB</p>
-                      <p>Маркетинг</p>
-                  </li>
-                  <li>
-                      <img src="./images/growing-bisnes.jpg" alt="Growing Business" width="370" height="294">
-                      <p>Growing Business</p>
-                      <p>Приложение</p>
-                  </li>
-              </ul>
-          </section>
-      </main>
-     <!--Подвал-->
+    </header>
+
+    <!--Герой-->
+    <main>
+      <!--Кнопки фильтров-->
+      <div>
+        <button type="button">Все</button>
+        <button type="button">Веб-сайты</button>
+        <button type="button">Приложения</button>
+        <button type="button">Дизайн</button>
+        <button type="button">Маркетинг</button>
+      </div>
+      <!--Секция выполненных работ-->
+      <section>
+        <h1>Примеры наших работ</h1>
+        <ul>
+          <li>
+            <img
+              src="./images/technockrack.jpg"
+              alt="Технокряк"
+              width="370"
+              height="294"
+            />
+            <p>Технокряк</p>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/neworlean.jpg"
+              alt="Постер New Orlean vs Golden Star"
+              width="370"
+              height="294"
+            />
+            <p>Постер New Orlean vs Golden Star</p>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/seafood.jpg" alt="" width="370" height="294" />
+            <p>Ресторан Seafood</p>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/prime.jpg" alt="" width="370" height="294" />
+            <p>Проект Prime</p>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/boxes.jpg"
+              alt="Проект Boxes"
+              width="370"
+              height="294"
+            />
+            <p>Проект Boxes</p>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/inspiration.jpg"
+              alt="Inspiration has no Borders"
+              width="370"
+              height="294"
+            />
+            <p>Inspiration has no Borders</p>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/limited-edition.jpg"
+              alt="Издание Limited Edition"
+              width="370"
+              height="294"
+            />
+            <p>Издание Limited Edition</p>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/lab.jpg"
+              alt="Проект LAB"
+              width="370"
+              height="294"
+            />
+            <p>Проект LAB</p>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/growing-bisnes.jpg"
+              alt="Growing Business"
+              width="370"
+              height="294"
+            />
+            <p>Growing Business</p>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Подвал-->
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
