--- a/index.html
+++ b/index.html
@@ -5,73 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!--Навигация-->
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="logo" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="list">
           <li>
-            <a href="">Студия</a>
+            <a class="nav-link" href="./index.html">Студия</a>
           </li>
 
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="#contacts">Контакты</a>
+            <a class="nav-link" href="#contacts">Контакты</a>
           </li>
         </ul>
       </nav>
       <!--Контакты-->
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com:">info@devstudio.com</a>
+          <a class="nav-link color-g" href="mailto:info@devstudio.com:"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav-link color-g" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
       <!--Герой-->
     </header>
     <main>
       <section>
-        <h1>
+        <h1 class="hero">
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="order-service" type="button">Заказать услугу</button>
       </section>
 
       <!--Описание особенностей компании-->
       <section>
-        <h2>Особенности</h2>
-        <ul>
+        <h2 class="hide">Особенности</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="hero-list">Внимание к деталям</h3>
+            <p class="color-g hero-tetx">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="hero-list">Пунктуальность</h3>
+            <p class="color-g hero-tetx">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="hero-list">Планирование</h3>
+            <p class="color-g hero-tetx">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="hero-list">Современные технологии</h3>
+            <p class="color-g hero-tetx">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -80,8 +93,8 @@
       </section>
       <!--Чем занимается компания-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="head-style">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <a href=""
               ><img
@@ -113,8 +126,8 @@
       </section>
       <!--Наша команда-->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="head-style">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/Product-Designer.jpg"
@@ -122,8 +135,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team">Игорь Демьяненко</h3>
+            <p class="color-g team-fs">Product Designer</p>
           </li>
           <li>
             <img
@@ -132,8 +145,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team">Ольга Репина</h3>
+            <p class="color-g team-fs">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -142,8 +155,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team">Николай Тарасов</h3>
+            <p class="color-g team-fs">Marketing</p>
           </li>
           <li>
             <img
@@ -152,27 +165,34 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team">Михаил Ермаков</h3>
+            <p class="color-g team-fs">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал-->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a id="contacts" href="https://goo.gl/maps/kGHBd9NLQaHWzJa29"
+            <a
+              class="adr-list"
+              id="contacts"
+              href="https://goo.gl/maps/kGHBd9NLQaHWzJa29"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="adr-list" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="adr-list" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
