добавил стили текста portfolio.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <a
               class="adr-list"
               id="contacts"
-              href="https://goo.gl/maps/kGHBd9NLQaHWzJa29"
+              href="https://goo.gl/maps/kGHBd9NLQaHWzJa29" target="_blank"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
