--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button class="order-service" type="button">Заказать услугу</button>
+        <button class="order-service btn" type="button">Заказать услугу</button>
       </section>
 
       <!--Описание особенностей компании-->
@@ -63,28 +63,28 @@
         <ul class="list">
           <li>
             <h3 class="hero-list">Внимание к деталям</h3>
-            <p class="color-g hero-tetx">
+            <p class="color-g hero-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="hero-list">Пунктуальность</h3>
-            <p class="color-g hero-tetx">
+            <p class="color-g hero-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="hero-list">Планирование</h3>
-            <p class="color-g hero-tetx">
+            <p class="color-g hero-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="hero-list">Современные технологии</h3>
-            <p class="color-g hero-tetx">
+            <p class="color-g hero-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
