--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button class="order-service btn" type="button">Заказать услугу</button>
+        <button class="order-service" type="button">Заказать услугу</button>
       </section>
 
       <!--Описание особенностей компании-->
