--- a/portfolio.html
+++ b/portfolio.html
@@ -49,16 +49,17 @@
     </header>
     <!--Герой-->
     <main>
-      <!--Кнопки фильтров-->
-      <div class="filter-btn">
-        <button class="btn" type="button">Все</button>
-        <button class="btn" type="button">Веб-сайты</button>
-        <button class="btn" type="button">Приложения</button>
-        <button class="btn" type="button">Дизайн</button>
-        <button class="btn" type="button">Маркетинг</button>
-      </div>
-      <!--Секция выполненных работ-->
       <section>
+        <!--Кнопки фильтров-->
+        <ul class="filter-btn">
+          <li><button class="btn" type="button">Все</button></li>
+          <li><button class="btn" type="button">Веб-сайты</button></li>
+          <li><button class="btn" type="button">Приложения</button></li>
+          <li><button class="btn" type="button">Дизайн</button></li>
+          <li><button class="btn" type="button">Маркетинг</button></li>
+        </ul>
+        <!--Секция выполненных работ-->
+
         <h1 class="hide">Примеры наших работ</h1>
         <ul class="list">
           <li>
@@ -145,8 +146,8 @@
       </section>
     </main>
     <!--Подвал-->
-    <footer>
-      <a class="logo" href="./index.html"
+    <footer class="back-color">
+      <a class="logo logo-footer" href="./index.html"
         ><span class="logo-web">Web</span>Studio</a
       >
       <address>
