--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!--Герой-->
     </header>
     <main>
-      <section>
+      <section class="back-color">
         <h1 class="hero">
           Эффективные решения<br />
           для вашего бизнеса
@@ -172,8 +172,8 @@
       </section>
     </main>
     <!--Подвал-->
-    <footer>
-      <a class="logo" href="./index.html"
+    <footer class="back-color">
+      <a class="logo logo-footer" href="./index.html"
         ><span class="logo-web">Web</span>Studio</a
       >
       <address>
